# crypto-inheritance-ai-lab

./: .env.example  .gitignore  fix_weak_sections.py  generate_design_docs.py  generate_docs.sh  generate_gtm_docs.py  generate_legal_docs.py  generate_reports.py  generate_reports_direct.py  generate_strategic_docs.py  pyproject.toml  run_analysis.py
agents/: __init__.py  base.py  business_model_agent.py  competitor_agent.py  developer_platform_agent.py  gtm_agent.py  infrastructure_partnerships_agent.py  legal_agent.py  market_agent.py  product_agent.py  protocol_security_agent.py  protocol_strategy_agent.py  regulatory_structure_agent.py  report_agent.py  research_agent.py  security_agent.py  user_validation_agent.py  vc_scoring_agent.py
backend/: config.py  database.py  main.py  models.py  schemas.py
config/: settings.py
design/: 01_ux_architecture.md  02_user_journeys.md  03_trust_security_ux.md  04_design_system.md  05_dashboard_concept.md  06_mvp_ui_scope.md
docs/: supabase_setup.md
frontend/: README.md  package-lock.json  package.json
legal/: privacy_policy.md  terms_of_service.md
memory/: __init__.py  vector_store.py
orchestrator/: orchestrator.py
protocol/: __init__.py  crypto_core.py  heirs.py  triggers.py
reports/: acquisition_channels.md  compliance_checklist.md  content_engine.md  developer_portal.md  first_100_users.md  gtm_entry_strategy.md  improved_go-to-market_strategy_deep.md  improved_market_opportunity_deep.md  improved_partnership_strategy_deep.md  landing_conversion.md  legacyguard_01_executive_strategy.md  legal_architecture.md  (+18 more)
(+66 files in other folders)
